@@ -5,7 +5,8 @@ See the end for copying conditions.
 * Version 1.1 (unreleased)
 
 ** DIGEST-MD5 client: Add support for client integrity layer.
-The layer is used by default if the server supports it.
+The layer is not used by default, the client needs to request it
+specifically in a callback or by setting the GSASL_QOP property.
 
 ** DIGEST-MD5: Decoding of integrity protected sessions now work.
 Reported by Andery Melnikov <temnota.am@gmail.com>.
@@ -39,6 +40,10 @@ integrity.  Before, the server unconditionally advertised support for
 both.  Note that confidentiality is not supported, and if you request
 it you will get an error.  Suggested by Andery Melnikov
 <temnota.am@gmail.com>.
+
+** DIGEST-MD5 server: No longer advertise support for integrity by default.
+You can request it specifically through a callback or setting the
+GSASL_QOPS property.
 
 ** libgsasl: Added C pre-processor expressions for version handling.
 The new symbols GSASL_VERSION_MAJOR, GSASL_VERSION_MINOR,
